@@ -4,6 +4,7 @@ import VSprite from "./Common/Sprite.vue";
 import VMarker from "./Common/Marker.vue";
 import VPopup from "./Common/Popup.vue";
 import VFog from "./Common/Fog.vue";
+import VFeatureState from "./Common/FeatureState.vue";
 import VAttributionControl from "./Controls/AttributionControl.vue";
 import VNavigationControl from "./Controls/NavigationControl.vue";
 import VScaleControl from "./Controls/ScaleControl.vue";
@@ -32,6 +33,7 @@ const MapVue = {
     app.component("v-marker", VMarker);
     app.component("v-popup", VPopup);
     app.component("v-fog", VFog);
+    app.component("v-feature-state", VFeatureState);
     app.component("v-attribution-control", VAttributionControl);
     app.component("v-navigation-control", VNavigationControl);
     app.component("v-scale-control", VScaleControl);
@@ -76,6 +78,7 @@ export {
   VMarker,
   VPopup,
   VFog,
+  VFeatureState,
   VAttributionControl,
   VNavigationControl,
   VScaleControl,
