@@ -1,3 +1,8 @@
+### 2022-08-05
+
+1. Fixed mouse events in layers
+2. Add VFeatureState component
+
 ### 2022-08-03
 
 1. Add ts declare file
